@@ -36,7 +36,7 @@ stable release (for example 2.2.x releases do not have changes after 2.2.0).</p>
   print("    <th class=\"left\">Language</th>\n");
   print("    <th class=\"left\">Status</th>\n");
   print("    <th class=\"left\">Author</th>\n");
-  print("    <th class=\"center\" colspan=\"5\">Versions</th>\n");
+  print("    <th class=\"center\" colspan=\"6\">Versions</th>\n");
   print("  </tr>\n");
   $languages = $status['L10N'][0]['LANGUAGE'];
   $languages = $page->multisortArray($languages, 'NAME', SORT_ASC);
@@ -85,6 +85,7 @@ stable release (for example 2.2.x releases do not have changes after 2.2.0).</p>
     }
     print("</td>\n");
 
+    $version_26 = '&nbsp;';
     $version_25 = '&nbsp;';
     $version_24 = '&nbsp;';
     $version_22 = '&nbsp;';
@@ -94,6 +95,9 @@ stable release (for example 2.2.x releases do not have changes after 2.2.0).</p>
       $version = $versions[$j]['VALUE'];
       
       switch ($version) {
+        case '2.6':
+          $version_26 = '<span title="upcoming stable version">2.6</span>';
+          break;
         case '2.5':
           $version_25 = '<span title="latest development version">2.5</span>';
           break;
@@ -111,6 +115,7 @@ stable release (for example 2.2.x releases do not have changes after 2.2.0).</p>
           break;
       }
     }
+    print("    <td class=\"center\">" . $version_26 . "</td>\n");
     print("    <td class=\"center\">" . $version_25 . "</td>\n");
     print("    <td class=\"center\">" . $version_24 . "</td>\n");
     print("    <td class=\"center\">" . $version_22 . "</td>\n");
